# multiplayer-card-game

./: Cargo.toml  settings.txt
client-side/: Cargo.toml
game-logic/: Cargo.toml
game-logic/src/: card.rs  cards.rs  lib.rs  player.rs  writer.rs
game-logic/src/game/: mod.rs
game-logic/src/game/games/: mod.rs  thousand.rs
old game/game-logic/src/: cards.rs  lib.rs  player.rs
old game/game-logic/src/game/: mod.rs
old game/server-side/: Cargo.toml
old game/server-side/src/: error.rs
old game/server-side/src/server/: demo.rs
server-side/: Cargo.toml
server-side/src/: error.rs  main.rs
server-side/src/server/: mod.rs
src/: id.rs  main.rs  player.rs  std_writer.rs
