[package]
name = "server-side"
version = "0.1.0"
edition = "2021"
authors = ["FluffyLuke"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-logic = { path = "../game-logic" }
tokio = {version = "1", features = ["full"]}
clap = { version = "4.3.23", features = ["derive"] }
regex = "1.9.4"
